[package]
name = "bvec"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
trybuild = "1.0.56"
criterion = "0.4"
# im = "15.0"
# pprof = { version = "0.11", features = ["criterion", "flamegraph"] }

[profile.bench]
debug = true

[[bench]]
name = "criterion"
harness = false
